# Iris-RESTful-Server

./: .dockerignore  CMakeLists.txt  README.md
.github/workflows/: build-docker-linux.yml  build-linux.yml  build-macos.yml  build-win64.yml  cmake-linux-CI.yml  cmake-macos-Cl.yml  cmake-win64-Cl.yml  deploy-docker-linux.yml  distribute-releases.yml  docker-linux-CI.yml
Docker/: Dockerfile  cloudbuild.yaml  compose.yaml
include/: IrisResfultCore.hpp  IrisRestfulTypes.hpp
priv/: IrisAsync.cpp  IrisAsync.hpp  IrisQueue.hpp  IrisRestfulNetworking.hpp  IrisRestfulPriv.hpp  IrisRestfulServer.hpp  IrisRestfulSlide.hpp
src/: IrisRestfulGetParser.cpp  IrisRestfulGetSerializer.cpp  IrisRestfulNetworking.cpp  IrisRestfulSSL.cpp  IrisRestfulServer.cpp  IrisRestfulSlide.cpp  main.cpp
